cmake_minimum_required (VERSION 2.6)

INCLUDE(CheckFunctionExists)
CHECK_FUNCTION_EXISTS(irint IRINTFOUND)
IF(NOT IRINTFOUND)
  add_definitions(-DNO_IRINT)
ENDIF(NOT IRINTFOUND)

INCLUDE(TestBigEndian)
TEST_BIG_ENDIAN(BIGENDIAN)
IF(NOT BIGENDIAN)
  add_definitions(-DUSES_LITTLE_ENDIAN)
ENDIF(NOT BIGENDIAN)

#add_definitions(-DNO_IRINT -DUSES_LITTLE_ENDIAN)
#other defines code uses: -DSVR4 -DUSE_MATLAB -DRANDOM_UNDEFINED -Dlint
SET(CMAKE_INSTALL_PREFIX /usr/local/cnu)
include_directories (${CMAKE_INSTALL_PREFIX}/include)
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/lib)
add_subdirectory(psyimg)
add_subdirectory(roistats)
add_subdirectory(add2imgs)
add_subdirectory(catimgs)
add_subdirectory(ecat7header)
add_subdirectory(padimg)
add_subdirectory(raw2analyze)
add_subdirectory(statimgchange)
add_subdirectory(addimgs)
add_subdirectory(ecat7headeredit)
add_subdirectory(imgmath)
add_subdirectory(pcorrelate)
add_subdirectory(regress)
add_subdirectory(subregion)
add_subdirectory(analyze2ecat)
add_subdirectory(connectedregion)
add_subdirectory(ecatconvert)
add_subdirectory(multiimgmath)
add_subdirectory(pearl)
add_subdirectory(resample)
add_subdirectory(talairach)
add_subdirectory(analyzeheader)
add_subdirectory(convertto1d)
add_subdirectory(ecatheader)
add_subdirectory(niftiheader)
add_subdirectory(petpoint)
add_subdirectory(resliceimg)
add_subdirectory(talairachgrid)
add_subdirectory(analyzeheaderedit)
add_subdirectory(dicomheader)
add_subdirectory(ecatheaderedit)
add_subdirectory(niftiheaderedit)
add_subdirectory(pixelstats)
add_subdirectory(talairachpoint)
add_subdirectory(bldshape)
add_subdirectory(diff2imgs)
add_subdirectory(fftfilter)
add_subdirectory(normalizemean)
add_subdirectory(scaleimg)
add_subdirectory(templateimg)
add_subdirectory(bldtemplate)
add_subdirectory(divideimgs)
add_subdirectory(filterimg)
add_subdirectory(normmean)
add_subdirectory(psyimgheader)
add_subdirectory(sdtheader)
add_subdirectory(ttestimgs)
add_subdirectory(brainextents)
add_subdirectory(ecat2analyze)
add_subdirectory(flipimage)
add_subdirectory(onedfilter)
add_subdirectory(psyrandom)
add_subdirectory(shiftimg)
add_subdirectory(umri2analyze)
add_subdirectory(gammaz)

